--- a/package.json
+++ b/package.json
@@ -55,10 +55,13 @@
     "gulp-util": "^3.0.7",
     "gulp-zip": "^3.1.0",
     "inquirer": "^0.11.4",
+    "jsdom": "^9.0.0",
     "merge-stream": "^1.0.0",
     "minimist": "^1.2.0",
+    "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
     "run-sequence": "^1.1.5",
+    "should": "^8.3.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
