[WDS-1156]: adds gulp file, updates gulp config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prestart": "gulp copy-vendor-sass",
     "start": "gulp website:serve",
     "build": "gulp copy-vendor-sass && gulp release",
-    "test": "gulp eslint scss-lint",
+    "test": "gulp eslint scss-lint test",
     "preversion": "npm test",
     "version": "npm run prepublish",
     "deploy": "gulp copy-vendor-sass && gulp website:build"
@@ -47,6 +47,7 @@
     "gulp-eslint": "^1.1.1",
     "gulp-filter": "^3.0.1",
     "gulp-if": "^2.0.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-scss-lint": "^0.3.9",
